# navihack-atc2dialog

./: .dockerignore  .env.sample  .gitignore  Brewfile  Dockerfile  Makefile  README.md  SETUP.md  TEST_AUTHENTICATION.md  app.py  chainlit.md  chainlit.toml  docker-compose.https.yml  docker-compose.yml  pyproject.toml
.cursor/commands/: review-branch.md
.cursor/rules/: always.md
.github/: pull_request_template.md
assistants/: __init__.py
assistants/healthcare/: __init__.py  agent.py  tools.py
chainlit_bootstrap/: __init__.py  atc_parser.py  audio.py  auth.py  charts.py  compat.py  handlers.py  llm.py  search.py
chainlit_bootstrap/assistants/: __init__.py
docs/: LOCAL_DEV_AUTH.md  requirements.md  technical-design.md
infra/: README.md  backend.tf.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/gcs_bucket/: main.tf  outputs.tf  variables.tf
ops/https/: Caddyfile
prompts/: prompt_transcript_analysis
public/: theme-default.json  theme-forest.json  theme-ocean.json  theme.json
public/elements/: CollapsibleSection.jsx  ConversationView.jsx
scripts/: init_db.py  one_time_setup.sh  text_2_speech.py
transcripts/: transcript_1.txt
